crates/rekindle-client/tests/ui/fail/duplicate_public_name.rs
use rekindle_client::ClientOptions;

pub struct ClientOptions;

fn main() {}
